# defect-prediction

./: .gitignore  README.md  invoke-model-building.sh  pyproject.toml
data/: .gitignore  callables_metrics.csv  class_metrics.csv
data/commits/: activemq.txt  camel.txt  cassandra.txt  flink.txt  groovy.txt  hadoop-hdfs.txt  hadoop-mapreduce.txt  hadoop.txt  hbase.txt  hive.txt  ignite.txt  kafka.txt  spark.txt  zeppelin.txt  zookeeper.txt
docs/: bird-view-architecture.puml  defects-architecture.puml  getting-started.md  metrics-architecture.puml  reproduction.md  smells-architecture.puml  usage-runners.md
manual_analysis/: autoencoder-analysis.ipynb  defect-performance-basic-metrics.ipynb  defect-performance-metrics.ipynb  defect-performance-per-project.ipynb  defect-performance-single-metric.ipynb  final-data.ipynb  manual-analysis-apachejit.ipynb  manual-analysis-mlcq.ipynb  manual-analysis.ipynb  smell-performance-metrics.ipynb  template-analysis.ipynb
manual_analysis/basic-metrics/: defect-performance-basic-metrics.ipynb  (+1 more)
runners/: .gitignore  Dockerfile  README.md  __init__.py  build_autoencoders.sh  invoke-autoencoder-experiment.sh  invoke-basic-experiment-cloud.sh  invoke-data-collection.sh  invoke-data-preprocessing.sh  invoke-defect-models-experiment.sh  invoke-defect-models-generation.sh  invoke-perproject-experiment-cloud.sh  invoke-selected-features-collection.sh  invoke-single-experiment-cloud.sh  invoke-smell-models-generation.sh  invoke-smells-experiment.sh  invoke.sh  minimal-experiment.sh  requirements.txt  test-experiment.sh  vm-provisioning.sh
(+86 files in other folders)
