[tool.poetry]
name = "defect-prediction"
version = "0.1.0"
description = "Support framework for my PhD thesis"
authors = ["Tomasz Lewowski <tomasz.lewowski@ratelware.com>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "defect_modelling", from = "runners" },
    { include = "metric_differ", from = "runners" },
    { include = "metric_gathering", from = "runners" },
    { include = "metric_joining", from = "runners" },
    { include = "preprocessor", from = "runners" },
    { include = "repository_cloning", from = "runners" },
    { include = "smell_modelling", from = "runners" }
]

[tool.poetry.dependencies]
python = "^3.10"
seaborn = "^0.12.2"
statsmodels = "^0.14.0"
scikit-learn = "^1.1.0"
PyDriller = "^2.3"
jupyter = "^1.0.0"
keras = "^3.8.0"
torch = "^2.5.1"
skops = "^0.11.0"
humanize = "^4.11.0"
catboost = "^1.2.7"
lightgbm = "^4.5.0"
xgboost = "^2.1.3"
boruta = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
